--- a/changelog.txt
+++ b/changelog.txt
@@ -1,6 +1,10 @@
 *** Blank Functions ***
 
-2020-09-12 version 1.0
+2020-09-12 version 1.1.0
+
+* Added woocommerce template functions
+
+2020-09-12 version 1.0.0
 
 * Initial release
 
